# candles-sync

./: .gitignore  README.md  Readme.md  example.py  example_import.py  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md
candles_sync/: __init__.py  candles_sync.py
candles_sync/adapters/: __init__.py  base.py  binance.py  bitfinex.py  eodhd.py  yahoo.py
candles_sync/providers/: __init__.py
candles_sync/providers/bitfinex/: __init__.py  metadata.py
candles_sync/providers/eodhd/: __init__.py  bulk.py  metadata.py  resolver.py
tests/: conftest.py  test_adapters.py  test_audit_fixes.py  test_bulk.py  test_canonical.py  test_cli.py  test_fetch.py  test_gap_filling.py  test_partition.py  test_resolver.py  test_write_partition.py
